unpackaged/main/default/objects/Account/fields/Academic_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Academic_Calendar__c</fullName>
    <inlineHelpText>This field isn’t actually used</inlineHelpText>
    <label>Academic Calendar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Semester</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Trimester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>