unpackaged/main/default/objects/Account/fields/Accessibility_language_content__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_language_content__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility language content</label>
    <type>Checkbox</type>
</CustomField>