unpackaged/main/default/objects/Account/fields/Accessibility_Universal_Design__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_Universal_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility Universal Design</label>
    <type>Checkbox</type>
</CustomField>