unpackaged/main/default/objects/Account/fields/Accessibility_VPAT__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_VPAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility VPAT</label>
    <type>Checkbox</type>
</CustomField>