unpackaged/main/default/objects/Account/fields/Accessibility_WCAG__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_WCAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accessibility WCAG</label>
    <type>Checkbox</type>
</CustomField>