unpackaged/main/default/objects/Account/fields/Achieving_the_Dream_School__c.field-meta.xml
<CustomField>
    <fullName>Achieving_the_Dream_School__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Populated based on this list in 2016 http://achievingthedream.org/our-approach/our-network</description>
    <inlineHelpText>Populated based on this list in 2016</inlineHelpText>
    <label>Achieving the Dream School</label>
    <type>Checkbox</type>
</CustomField>