unpackaged/main/default/objects/Account/fields/Adaptivity_breadth_and_depth__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_breadth_and_depth__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity breadth and depth</label>
    <type>Checkbox</type>
</CustomField>