unpackaged/main/default/objects/Account/fields/Adaptivity_customized_path__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_customized_path__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity customized path</label>
    <type>Checkbox</type>
</CustomField>