unpackaged/main/default/objects/Account/fields/Adaptivity_varied_level__c.field-meta.xml
<CustomField>
    <fullName>Adaptivity_varied_level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adaptivity varied level</label>
    <type>Checkbox</type>
</CustomField>