unpackaged/main/default/objects/Account/fields/Address_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Address_Latitude__c</fullName>
    <formula>BillingLatitude</formula>
    <label>Address Latitude</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>