unpackaged/main/default/objects/Account/fields/Admin_calendar_links__c.field-meta.xml
<CustomField>
    <fullName>Admin_calendar_links__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Admin calendar links</label>
    <type>Checkbox</type>
</CustomField>