unpackaged/main/default/objects/Account/fields/admin_online_submission__c.field-meta.xml
<CustomField>
    <fullName>admin_online_submission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>admin online submission</label>
    <type>Checkbox</type>
</CustomField>