unpackaged/main/default/objects/Account/fields/Adoptions_in_District__c.field-meta.xml
<CustomField>
    <fullName>Adoptions_in_District__c</fullName>
    <description>DLRS Rollup FIeld</description>
    <inlineHelpText>Doesn’t populate anymore</inlineHelpText>
    <label>Adoptions in District</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>