unpackaged/main/default/objects/Account/fields/Affordability_cost__c.field-meta.xml
<CustomField>
    <fullName>Affordability_cost__c</fullName>
    <label>Affordability Cost</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0-$10</fullName>
            </value>
            <value>
                <fullName>$11-$25</fullName>
            </value>
            <value>
                <fullName>$26-$40</fullName>
            </value>
            <value>
                <fullName>&gt;$40</fullName>
            </value>
            <value>
                <fullName>Free-$10</fullName>
                <isActive>false</isActive>
                <label>Free-$10</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>