unpackaged/main/default/objects/Account/fields/AI_Code__c.field-meta.xml
<CustomField>
    <fullName>AI_Code__c</fullName>
    <description>AI= Attending Institution. https://www.ets.org/s/praxis/pdf/attending_inst_recipient_codes.pdf</description>
    <inlineHelpText>Some external ID for institutions</inlineHelpText>
    <label>Attending Institution Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>