unpackaged/main/default/objects/Account/fields/All_Time_Savings2__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Savings2__c</fullName>
    <formula>Savings_Next_Year__c + 
 Savings_Current_Year__c +
 Savings_Previous_Year__c +
 Savings_Past_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Past + Present + Future savings</inlineHelpText>
    <label>Savings All Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>