unpackaged/main/default/objects/Account/fields/All_Time_Savings__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Savings__c</fullName>
    <formula>Savings_Current_Year__c +
 Savings_Previous_Year__c +
 Savings_Past_Years__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Savings For everything but future</inlineHelpText>
    <label>To Date Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>