unpackaged/main/default/objects/Account/fields/All_Time_Students2__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Students2__c</fullName>
    <formula>Students_Current_Year__c +
 Students_Next_Year__c +
 Students_Past_Years__c +
 Students_Previous_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Past + Present + Future Students</inlineHelpText>
    <label>Students All Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>