unpackaged/main/default/objects/Account/fields/App_available__c.field-meta.xml
<CustomField>
    <fullName>App_available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>App available</label>
    <type>Checkbox</type>
</CustomField>