unpackaged/main/default/objects/Account/fields/Approximate_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Enrollment__c</fullName>
    <description>What is the approximate enrollment for the entire institution?</description>
    <inlineHelpText>Number of students based on https://www.cappex.com/</inlineHelpText>
    <label>Undergraduate Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>