unpackaged/main/default/objects/Account/fields/Assignment_editing__c.field-meta.xml
<CustomField>
    <fullName>Assignment_editing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment editing</label>
    <type>Checkbox</type>
</CustomField>