unpackaged/main/default/objects/Account/fields/Assignment_multimedia__c.field-meta.xml
<CustomField>
    <fullName>Assignment_multimedia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment multimedia</label>
    <type>Checkbox</type>
</CustomField>