unpackaged/main/default/objects/Account/fields/Assignment_outside_resources__c.field-meta.xml
<CustomField>
    <fullName>Assignment_outside_resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment outside resources</label>
    <type>Checkbox</type>
</CustomField>