unpackaged/main/default/objects/Account/fields/Assignment_scientific_structures__c.field-meta.xml
<CustomField>
    <fullName>Assignment_scientific_structures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assignment scientific structures</label>
    <type>Checkbox</type>
</CustomField>