unpackaged/main/default/objects/Account/fields/Autonomy_digital_badges__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_digital_badges__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autonomy digital badges</label>
    <type>Checkbox</type>
</CustomField>