unpackaged/main/default/objects/Account/fields/Autonomy_self_reflection__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_self_reflection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autonomy self reflection</label>
    <type>Checkbox</type>
</CustomField>