unpackaged/main/default/objects/Account/fields/Autonomy_summative_assessments__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_summative_assessments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autonomy summative assessments</label>
    <type>Checkbox</type>
</CustomField>