unpackaged/main/default/objects/Account/fields/Autorenew__c.field-meta.xml
<CustomField>
    <fullName>Autorenew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-Renew</label>
    <type>Checkbox</type>
</CustomField>