unpackaged/main/default/objects/Account/fields/Barnes_and_Noble_bookstore__c.field-meta.xml
<CustomField>
    <fullName>Barnes_and_Noble_bookstore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Barnes and Noble bookstore</label>
    <type>Checkbox</type>
</CustomField>