unpackaged/main/default/objects/Account/fields/Books_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Books_Adopted__c</fullName>
    <label>Books Adopted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>