unpackaged/main/default/objects/Account/fields/Books_Offered__c.field-meta.xml
<CustomField>
    <fullName>Books_Offered__c</fullName>
    <inlineHelpText>Books that a partner offers</inlineHelpText>
    <label>Books Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Books</valueSetName>
    </valueSet>
</CustomField>