unpackaged/main/default/objects/Account/fields/Bookstore_Web_Site__c.field-meta.xml
<CustomField>
    <fullName>Bookstore_Web_Site__c</fullName>
    <label>Bookstore Web Site</label>
    <type>Url</type>
</CustomField>