unpackaged/main/default/objects/Account/fields/child_of_kip__c.field-meta.xml
<CustomField>
    <fullName>child_of_kip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Child of KIP</label>
    <type>Checkbox</type>
</CustomField>