unpackaged/main/default/objects/Account/fields/Class_Schedule_Link__c.field-meta.xml
<CustomField>
    <fullName>Class_Schedule_Link__c</fullName>
    <label>Class Schedule Link</label>
    <type>Url</type>
</CustomField>