unpackaged/main/default/objects/Account/fields/Collaboration_teacher_learner_contact__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_teacher_learner_contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaboration teacher learner contact</label>
    <type>Checkbox</type>
</CustomField>