unpackaged/main/default/objects/Account/fields/Collaboration_tutor__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_tutor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaboration tutor</label>
    <type>Checkbox</type>
</CustomField>