unpackaged/main/default/objects/Account/fields/Contact_using_competitor__c.field-meta.xml
<CustomField>
    <fullName>Contact_using_competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Does school have a contact using Tutor competitior</inlineHelpText>
    <label>Contact using competitor</label>
    <type>Checkbox</type>
</CustomField>