unpackaged/main/default/objects/Account/fields/Content_batch_uploads__c.field-meta.xml
<CustomField>
    <fullName>Content_batch_uploads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content batch uploads</label>
    <type>Checkbox</type>
</CustomField>