unpackaged/main/default/objects/Account/fields/Content_resource_sharing__c.field-meta.xml
<CustomField>
    <fullName>Content_resource_sharing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content resource sharing</label>
    <type>Checkbox</type>
</CustomField>