unpackaged/main/default/objects/Account/fields/Content_sharing_among_courses__c.field-meta.xml
<CustomField>
    <fullName>Content_sharing_among_courses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Content sharing among courses</label>
    <type>Checkbox</type>
</CustomField>