unpackaged/main/default/objects/Account/fields/Content_Support_Details__c.field-meta.xml
<CustomField>
    <fullName>Content_Support_Details__c</fullName>
    <label>Content Support Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>