unpackaged/main/default/objects/Account/fields/Continent__c.field-meta.xml
<CustomField>
    <fullName>Continent__c</fullName>
    <label>Continent</label>
    <type>TextArea</type>
</CustomField>