unpackaged/main/default/objects/Account/fields/Contract_renewal_deadline__c.field-meta.xml
<CustomField>
    <fullName>Contract_renewal_deadline__c</fullName>
    <label>Contract renewal deadline</label>
    <type>Date</type>
</CustomField>