unpackaged/main/default/objects/Account/fields/Contract_start_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_start_date__c</fullName>
    <label>Contract start date</label>
    <type>Date</type>
</CustomField>