unpackaged/main/default/objects/Account/fields/Contract_termination_date__c.field-meta.xml
<CustomField>
    <fullName>Contract_termination_date__c</fullName>
    <label>Contract termination date</label>
    <type>Date</type>
</CustomField>