unpackaged/main/default/objects/Account/fields/Contributors__c.field-meta.xml
<CustomField>
    <fullName>Contributors__c</fullName>
    <description>Number of people at this school who have contributed to our resources</description>
    <inlineHelpText>Number of contacts at school that contributed to creating our books</inlineHelpText>
    <label>Contributors</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>