unpackaged/main/default/objects/Account/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Admin - used in formulas</inlineHelpText>
    <label>School Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>