unpackaged/main/default/objects/Account/fields/Customization_assessment_repository__c.field-meta.xml
<CustomField>
    <fullName>Customization_assessment_repository__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customization assessment repository</label>
    <type>Checkbox</type>
</CustomField>