unpackaged/main/default/objects/Account/fields/Customization_create_learning_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Customization_create_learning_outcomes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customization create learning outcomes</label>
    <type>Checkbox</type>
</CustomField>