unpackaged/main/default/objects/Account/fields/Date_late_payment_received__c.field-meta.xml
<CustomField>
    <fullName>Date_late_payment_received__c</fullName>
    <label>Date late payment received</label>
    <type>Date</type>
</CustomField>