unpackaged/main/default/objects/Account/fields/Days_past_due__c.field-meta.xml
<CustomField>
    <fullName>Days_past_due__c</fullName>
    <formula>TEXT(ROUND((TODAY()+10 - Receivables_Due_Date__c)  ,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days past due</label>
    <type>Text</type>
</CustomField>