unpackaged/main/default/objects/Account/fields/denver_check__c.field-meta.xml
<CustomField>
    <fullName>denver_check__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>check this if you want this school removed from the report</inlineHelpText>
    <label>denver check</label>
    <type>Checkbox</type>
</CustomField>