unpackaged/main/default/objects/Account/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <inlineHelpText>How far away from Rice</inlineHelpText>
    <label>Distance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 hour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>