unpackaged/main/default/objects/Account/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <formula>IF(
    FIND(
      "/",
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,"www.",""),"http://",""),"www2.",""),"www3.",""),"www1.",""),"https://",""),
      1
    )&gt;1

,
LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,"www.",""),"http://",""),"www2.",""),"www3.",""),"www1.",""),"https://",""),FIND("/",SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,"www.",""),"http://",""),"www2.",""),"www3.",""),"www1.",""),"https://",""))-1)
,
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website,"www.",""),"http://",""),"www2.",""),"www3.",""),"www1.",""),"https://","")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Domain</label>
    <type>Text</type>
</CustomField>