unpackaged/main/default/objects/Account/fields/Email_for_Leads__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Leads__c</fullName>
    <inlineHelpText>use ; to add multiple</inlineHelpText>
    <label>Email for Leads</label>
    <length>255</length>
    <type>Text</type>
</CustomField>