unpackaged/main/default/objects/Account/fields/Enrolled_American_Indian_or_Alaska_Nativ__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_American_Indian_or_Alaska_Nativ__c</fullName>
    <label>Enrolled American Indian or Alaska Nativ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>