unpackaged/main/default/objects/Account/fields/Enrolled_Asian__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Asian__c</fullName>
    <label>Enrolled Asian</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>