unpackaged/main/default/objects/Account/fields/Enrolled_Black_or_African_American__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Black_or_African_American__c</fullName>
    <label>Enrolled Black or African American</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>