unpackaged/main/default/objects/Account/fields/Enrolled_Hispanic_or_Latino__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Hispanic_or_Latino__c</fullName>
    <label>Enrolled Hispanic or Latino</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>