unpackaged/main/default/objects/Account/fields/Enrolled_Native_Hawaiian_or_Other_Pacifi__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Native_Hawaiian_or_Other_Pacifi__c</fullName>
    <label>Enrolled Native Hawaiian or Other Pacifi</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>