unpackaged/main/default/objects/Account/fields/Enrolled_Two_or_More_Races__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Two_or_More_Races__c</fullName>
    <label>Enrolled Two or More Races</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>