unpackaged/main/default/objects/Account/fields/Enrolled_Unknown__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Unknown__c</fullName>
    <label>Enrolled Unknown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>