unpackaged/main/default/objects/Account/fields/Enrolled_White__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_White__c</fullName>
    <label>Enrolled White</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>