unpackaged/main/default/objects/Account/fields/Equity_Rating__c.field-meta.xml
<CustomField>
    <fullName>Equity_Rating__c</fullName>
    <formula>'OK'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equity Rating</label>
    <type>Text</type>
</CustomField>