unpackaged/main/default/objects/Account/fields/Exception_based_on_the_total_amount_of_p__c.field-meta.xml
<CustomField>
    <fullName>Exception_based_on_the_total_amount_of_p__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Exception based on the total amount of p</label>
    <type>Checkbox</type>
</CustomField>