unpackaged/main/default/objects/Account/fields/Exception_to_standard_Content_Support__c.field-meta.xml
<CustomField>
    <fullName>Exception_to_standard_Content_Support__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exception to standard Content Support</label>
    <type>Checkbox</type>
</CustomField>