unpackaged/main/default/objects/Account/fields/Exclude__c.field-meta.xml
<CustomField>
    <fullName>Exclude__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude (testing accounts)</label>
    <type>Checkbox</type>
</CustomField>