unpackaged/main/default/objects/Account/fields/External_Partner__c.field-meta.xml
<CustomField>
    <fullName>External_Partner__c</fullName>
    <formula>RecordType.Name = "Partner"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Partner?</label>
    <type>Checkbox</type>
</CustomField>