unpackaged/main/default/objects/Account/fields/Feedback_understanding__c.field-meta.xml
<CustomField>
    <fullName>Feedback_understanding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feedback understanding</label>
    <type>Checkbox</type>
</CustomField>