unpackaged/main/default/objects/Account/fields/Files_Exist__c.field-meta.xml
<CustomField>
    <fullName>Files_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Files Exist</label>
    <type>Checkbox</type>
</CustomField>