unpackaged/main/default/objects/Account/fields/Follett__c.field-meta.xml
<CustomField>
    <fullName>Follett__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To separate our Inclusive access partners</description>
    <inlineHelpText>To separate our Inclusive access partners</inlineHelpText>
    <label>Follett</label>
    <type>Checkbox</type>
</CustomField>