unpackaged/main/default/objects/Account/fields/Former_K_I_P__c.field-meta.xml
<CustomField>
    <fullName>Former_K_I_P__c</fullName>
    <defaultValue>false</defaultValue>
    <description>former kip schools</description>
    <label>Former K.I.P</label>
    <type>Checkbox</type>
</CustomField>