unpackaged/main/default/objects/Account/fields/Formstack_URL__c.field-meta.xml
<CustomField>
    <fullName>Formstack_URL__c</fullName>
    <label>Formstack URL</label>
    <type>Url</type>
</CustomField>