unpackaged/main/default/objects/Account/fields/Grading_change_scores__c.field-meta.xml
<CustomField>
    <fullName>Grading_change_scores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading change scores</label>
    <type>Checkbox</type>
</CustomField>