unpackaged/main/default/objects/Account/fields/Grading_group_work__c.field-meta.xml
<CustomField>
    <fullName>Grading_group_work__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading group work</label>
    <type>Checkbox</type>
</CustomField>