unpackaged/main/default/objects/Account/fields/Grading_tolerances_sig_fig__c.field-meta.xml
<CustomField>
    <fullName>Grading_tolerances_sig_fig__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grading tolerances, sig fig</label>
    <type>Checkbox</type>
</CustomField>