unpackaged/main/default/objects/Account/fields/Has_partner_product__c.field-meta.xml
<CustomField>
    <fullName>Has_partner_product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has partner product</label>
    <type>Checkbox</type>
</CustomField>