unpackaged/main/default/objects/Account/fields/HBCU__c.field-meta.xml
<CustomField>
    <fullName>HBCU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Historically Black College and University</inlineHelpText>
    <label>HBCU</label>
    <type>Checkbox</type>
</CustomField>