unpackaged/main/default/objects/Account/fields/HTML_Name__c.field-meta.xml
<CustomField>
    <fullName>HTML_Name__c</fullName>
    <formula>SUBSTITUTE( Name , " ", "%20")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for automation</inlineHelpText>
    <label>HTML Name</label>
    <type>Text</type>
</CustomField>