unpackaged/main/default/objects/Account/fields/Inclusive_Access_program__c.field-meta.xml
<CustomField>
    <fullName>Inclusive_Access_program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatic Billing</label>
    <type>Checkbox</type>
</CustomField>