unpackaged/main/default/objects/Account/fields/Independent_Bookstore__c.field-meta.xml
<CustomField>
    <fullName>Independent_Bookstore__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Independent Bookstore</label>
    <type>Checkbox</type>
</CustomField>